--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -18,8 +18,8 @@
     "start": "vite",
     "build": "tsc && vite build",
     "clean": "rimraf build",
-    "lint": "eslint src --ext js,jsx,ts,tsx",
-    "fix": "eslint src --ext js,jsx,ts,tsx --fix",
+    "lint": "eslint . --ext js,jsx,ts,tsx",
+    "fix": "eslint . --ext js,jsx,ts,tsx --fix",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -38,5 +38,8 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-tsconfig-paths": "^4.2.1"
+  },
+  "dependencies": {
+    "rfc4648": "^1.5.3"
   }
 }
