--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -7,8 +7,8 @@
     "start": "vite",
     "build": "tsc && vite build",
     "clean": "rimraf build",
-    "lint": "eslint src --ext js,jsx,ts,tsx",
-    "fix": "eslint src --ext js,jsx,ts,tsx --fix",
+    "lint": "eslint . --ext js,jsx,ts,tsx",
+    "fix": "eslint . --ext js,jsx,ts,tsx --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -16,17 +16,29 @@
     "@mui/material": "^5.14.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.5",
     "@mui/system": "^5.14.17",
+    "@tanstack/react-query": "^5.8.1",
+    "@tanstack/react-query-persist-client": "^5.8.1",
+    "autosuggest-highlight": "^3.3.4",
+    "axios": "^1.6.1",
+    "formik": "^2.4.5",
+    "idb-keyval": "^6.2.1",
+    "match-sorter": "^6.3.1",
     "pokegotypes": "^0.1.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "styled-components": "^6.1.0",
     "typeface-open-sans": "^1.1.13"
   },
   "devDependencies": {
+    "@types/autosuggest-highlight": "^3.2.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.0.0",
