--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
-        run: npm run build -- --mode development
+        run: npm run build
         env:
           VITE_SIGNAL_SERVER: ${{ secrets.VITE_SIGNAL_SERVER }}
       - name: Collect build artifacts
