--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/autosuggest-highlight": "^3.2.3",
+    "@types/dom-view-transitions": "^1.0.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
