Added missing metadata

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "type": "git",
     "url": "git+https://github.com/JayCanuck/poke-team-stream.git"
   },
-  "author": "Jason Robitaille",
+  "author": {
+    "name": "Jason Robitaille",
+    "url": "https://jrobitaille.dev"
+  },
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/JayCanuck/poke-team-stream/issues"
