--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -2,6 +2,10 @@
   "name": "poke-team-stream-widget",
   "private": true,
   "version": "0.1.0",
+  "author": {
+    "name": "Jason Robitaille",
+    "url": "https://jrobitaille.dev"
+  },
   "type": "module",
   "files": [
     "build"
