--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -2,6 +2,10 @@
   "name": "poke-team-stream-webapp",
   "private": true,
   "version": "0.1.0",
+  "author": {
+    "name": "Jason Robitaille",
+    "url": "https://jrobitaille.dev"
+  },
   "type": "module",
   "scripts": {
     "start": "vite",
